# realtime-ai-conversation

./: .gitignore  README.md
server/: README.md  pyproject.toml
server/src/langchain_openai_voice/: __init__.py
server/src/server/: app.py  prompt.py  tools.py
server/src/server/static/: index.html
server/src/server/static/css/: style.css
server/src/server/static/js/: main.js
server/src/server/static/js/audio/: Player.js  Recorder.js
